# minetest-mapper-cpp

./: .clang-format  .gitignore  .travis.yml  BlockPos.cpp  BlockPos.h  CMakeLists.txt  CMakeSettings.json  Changelog  CharEncodingConverter.cpp  CharEncodingConverter.h  CharEncodingConverterIConv.cpp  Color.h  PixelAttributes.cpp  PixelAttributes.h  README.rst  Settings.cpp  TileGenerator.cpp  TileGenerator.h  ZlibDecompressor.cpp  appveyor.yml  autogenerating-colors.txt  build_config.h.in  cmake_config.h.in  config.h  db-leveldb.cpp  db-leveldb.h  db-postgresql.cpp  db-postgresql.h  db-redis.cpp  db-redis.h  db-sqlite3.cpp  db-sqlite3.h  db.h  empty.cpp  mapper.cpp  minetest-database.h  minetestmapper.sln  package-description.txt  porting.h  porting_win32.h  (+2 more)
.github/workflows/: main.yml
MSVC/: gen-build-config.bat  minetestmapper.rc  minetestmapper.vcxproj  minetestmapper.vcxproj.filters  packages.config  resource.h
MSVC/dirent/: README.txt
MSVC/wingetopt/: LICENSE.txt  README.txt
Minetestmapper/: CMakeLists.txt  CharEncodingConverter.cpp  CharEncodingConverter.h  CharEncodingConverterIConv.cpp  CharEncodingConverterIConv.h  Color.cpp  Color.h  DataFileParser.cpp  DataFileParser.h  MapBlock.cpp  MapBlock.h  Mapper.cpp  Mapper.h  Minetestmapper.cpp  Minetestmapper.h  Minetestmapper.rc  PaintEngine.h  PaintEngine_libgd.cpp  PaintEngine_libgd.h  PaintEngine_libgdTTF.cpp  PaintEngine_libgdTTF.h  PixelAttributes.cpp  PixelAttributes.h  PlayerAttributes.cpp  PlayerAttributes.h  ResTempl1.rct  Settings.cpp  Settings.h  TileGenerator.cpp  TileGenerator.h  ZlibDecompressor.cpp  ZlibDecompressor.h  build_config.h  config.h  db-leveldb.cpp  db-leveldb.h  db-postgresql.cpp  db-postgresql.h  db-redis.cpp  db-redis.h  (+15 more)
cmake/: FindDocutils.cmake  FindIconv.cmake  abi-stdstring.cpp
colors/: colors-average-alpha.txt  colors-cumulative-alpha.txt  colors.txt  heightmap-nodes.txt
doc/: CMakeLists.txt  build-instructions.rst  features.rst  manual.rst
docs/: build-instructions.rst
dumpnodes/: README.dumpnodes  avgcolor.py  mkcolors
old_files/: CMakeCPackLists.txt  package-description.txt
